--- a/home.html
+++ b/home.html
@@ -659,9 +659,6 @@
 <a href="https://script.google.com/macros/s/AKfycbxlKKcXGWC6eSCpczjZ5Z50zZ0Y3dgXinJZcZ3wPekWhbHYT9Flva3jSmr4jhJcYfD9/exec" class="off-canvas-nav-link"><i class="fa fa-clipboard-check"></i> Konfirmasi DO Project</a>
 </li>
 <li class="off-canvas-nav-item">
-<a href="#jajaran-pic" class="off-canvas-nav-link"><i class="fa fa-user-tie"></i> Jajaran PIC</a>
-</li>
-<li class="off-canvas-nav-item">
 <a href="index.html" class="off-canvas-nav-link"><i class="fa fa-sign-out-alt"></i> Log Out</a>
 </li>
 </ul>
@@ -791,7 +788,7 @@
 <div class="pic-slideshow-container">
     <div class="pic-slide">
         <img src="ilyas.png" alt="Pak Ilyas">
-        <h3>Pak Ilyas</h3>
+        <h3>Pak Agus</h3>
         <p>PIC</p>
     </div>
     <div class="pic-slide">
@@ -800,18 +797,23 @@
         <p>PIC</p>
     </div>
     <div class="pic-slide">
-        <img src="budi.jpeg" alt="Pak Budi">
-        <h3>Pak Budi</h3>
+        <img src="irfan.jpeg" alt="Pak Budi">
+        <h3>Pak Johan</h3>
         <p>PIC</p>
     </div>
     <div class="pic-slide">
         <img src="yuni.png" alt="Bu Yuni">
-        <h3>Bu Yuni</h3>
+        <h3>Pak Adhi</h3>
         <p>PIC</p>
     </div>
     <div class="pic-slide">
         <img src="faisal.jpeg" alt="Pak Faisal">
         <h3>Pak Faisal</h3>
+        <p>PIC</p>
+    </div>
+    <div class="pic-slide">
+        <img src="faisal.jpeg" alt="Pak Faisal">
+        <h3>Pak Abureza</h3>
         <p>PIC</p>
     </div>
     <div class="pic-slide-controls">
