--- a/home.html
+++ b/home.html
@@ -787,33 +787,33 @@
 <h2 class="section-title" id="jajaran-pic">Jajaran PIC</h2>
 <div class="pic-slideshow-container">
     <div class="pic-slide">
-        <img src="ilyas.png" alt="Pak Ilyas">
+        <img src="KOSONG" alt="Pak Agus">
         <h3>Pak Agus</h3>
         <p>PIC</p>
     </div>
     <div class="pic-slide">
-        <img src="irfan.jpeg" alt="Pak Irfan">
+        <img src="KOSONG" alt="Pak Irfan">
         <h3>Pak Irfan</h3>
         <p>PIC</p>
     </div>
     <div class="pic-slide">
-        <img src="irfan.jpeg" alt="Pak Budi">
+        <img src="KOSONG" alt="Pak Johan">
         <h3>Pak Johan</h3>
         <p>PIC</p>
     </div>
     <div class="pic-slide">
-        <img src="yuni.png" alt="Bu Yuni">
+        <img src="KOSONG" alt="Pak Adhi">
         <h3>Pak Adhi</h3>
         <p>PIC</p>
     </div>
     <div class="pic-slide">
-        <img src="faisal.jpeg" alt="Pak Faisal">
+        <img src="KOSONG" alt="Pak Faisal">
         <h3>Pak Faisal</h3>
         <p>PIC</p>
     </div>
     <div class="pic-slide">
-        <img src="faisal.jpeg" alt="Pak Faisal">
-        <h3>Pak Abureza</h3>
+        <img src="KOSONG" alt="Pak Reza">
+        <h3>Pak Reza</h3>
         <p>PIC</p>
     </div>
     <div class="pic-slide-controls">
