--- a/home.html
+++ b/home.html
@@ -673,7 +673,7 @@
         <h1 class="header-title">Delivery Request Service</h1>
         <p class="header-motto">Delivering Responsibility, Every Request</p>
         <div class="header-divider"></div>
-        <p class="header-greeting">Ubur-ubur ikan lele, ada yang bisa dibantu le? 🤔</p>
+        <p class="header-greeting">Ubur-ubur ikan lele, ada yang bisa dibantu le? 🙏🏼</p>
     </header>
 
     <div class="image-slideshow-container">
